# decibri-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  release-dryrun.yml
npm/decibri-cli/: .npmignore  README.md  install.js  package.json  uninstall.js
npm/decibri-cli/tests/: platform.test.js  sha256sums.test.js  version.test.js
src/: device_resolve.rs  exit.rs  main.rs
src/commands/: capture.rs  devices.rs  mod.rs  play.rs  version.rs
tests/: capture_snapshot.rs  devices_snapshot.rs  play_snapshot.rs  version_parity.rs  version_snapshot.rs
tests/snapshots/: devices_snapshot__devices_json_schema_synthetic.snap  version_snapshot__version_json_schema_locked.snap
