[package]
name = "decibri-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
license = "Apache-2.0"
repository = "https://github.com/decibri/decibri-cli"
description = "Cross-platform CLI for audio capture, playback, and device management"
keywords = ["audio", "cli", "microphone", "capture", "playback"]
categories = ["command-line-utilities", "multimedia::audio"]
build = "build.rs"

[[bin]]
name = "decibri"
path = "src/main.rs"

[dependencies]
decibri = { version = "3.0.0", default-features = false, features = ["capture", "output"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.6"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hound = "3.5"
crossbeam-channel = "0.5"
ctrlc = "3"
indicatif = "0.18"
console = "0.16"
humantime = "2.1"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
